# local-text2image

./: .gitignore  AGENTS.md  LICENSE  README.md  TODO.md  pyproject.toml
config/: config.example.yaml
config/models/: flux-dev.yaml  flux-schnell.yaml
docs/: architecture.md  component-inventory.md  development-guide.md  index.md  manual-download.md  project-overview.md  source-tree-analysis.md  technical.md  user-guide.md
src/: __init__.py  cli.py
src/config/: __init__.py  loader.py
src/errors/: __init__.py  base.py  config_errors.py  hardware_errors.py  model_errors.py  output_errors.py
src/generation/: __init__.py  flux.py
src/models/: __init__.py  base.py  downloader.py  factory.py  validator.py
src/output/: __init__.py
src/utils/: console.py  device.py  env.py  progress.py
src/validation/: __init__.py
tests/: __init__.py
tests/unit/: test_cli_generate.py  test_config_loader.py  test_device.py  test_env.py  test_flux_loader.py  test_model_validator.py  test_output.py  test_validation.py
