[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "local-text2image"
version = "0.1.0"
description = "CLI application for local text-to-image generation"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Seba"}
]
dependencies = [
    "click>=8.0.0",
    "torch>=2.0.0,<3.0.0",
    "torchvision>=0.15.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
    "huggingface_hub>=0.20.0",
    "transformers>=4.30.0",
    "diffusers>=0.20.0",
    "accelerate>=0.20.0",
    "pillow>=10.0.0",
    "pytest>=7.0.0",
]

[project.scripts]
text2image = "src.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
